examples/openshift/amp-apicast-wildcard-router.yaml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: 2017-12-27T03:03:25Z
  name: amp-apicast-wildcard-router
  namespace: openshift
  resourceVersion: "923"
  selfLink: /oapi/v1/namespaces/openshift/templates/amp-apicast-wildcard-router
  uid: 8188aa00-eab2-11e7-8531-0050569c0b78
objects:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: apicast-router
  spec:
    replicas: 1
    selector:
      deploymentconfig: apicast-router
    strategy:
      type: Rolling
    template:
      metadata:
        labels:
          deploymentconfig: apicast-router
      spec:
        containers:
        - command:
          - bin/apicast
          env:
          - name: APICAST_CONFIGURATION_LOADER
            value: lazy
          - name: APICAST_CONFIGURATION_CACHE
            value: "0"
          image: 3scale-amp20/apicast-gateway:1.0-3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: router
            timeoutSeconds: 5
          name: apicast-router
          ports:
          - containerPort: 8082
            name: router
            protocol: TCP
          - containerPort: 8090
            name: management
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /status/ready
              port: management
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
          volumeMounts:
          - mountPath: /opt/app-root/src/sites.d/
            name: apicast-router-config
            readOnly: true
        volumes:
        - configMap:
            items:
            - key: router.conf
              path: router.conf
            name: apicast-router-config
          name: apicast-router-config
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    name: apicast-router
  spec:
    ports:
    - name: router
      port: 80
      protocol: TCP
      targetPort: router
    selector:
      deploymentconfig: apicast-router
- apiVersion: v1
  data:
    router.conf: |-
      upstream wildcard {
        server 0.0.0.1:1;

        balancer_by_lua_block {
          local round_robin = require 'resty.balancer.round_robin'
          local balancer = round_robin.new()
          local peers = balancer:peers(ngx.ctx.apicast)

          local peer, err = balancer:set_peer(peers)

          if not peer then
            ngx.status = ngx.HTTP_SERVICE_UNAVAILABLE
            ngx.log(ngx.ERR, "failed to set current backend peer: ", err)
            ngx.exit(ngx.status)
          end
        }

        keepalive 1024;
      }

      server {
        listen 8082;
        server_name ~-(?<apicast>apicast-(staging|production))\.;
        access_log /dev/stdout combined;

        location / {
          access_by_lua_block {
            local resolver = require('resty.resolver'):instance()
            local servers = resolver:get_servers(ngx.var.apicast, { port = 8080 })

            if #servers == 0 then
              ngx.status = ngx.HTTP_BAD_GATEWAY
              ngx.exit(ngx.HTTP_OK)
            end

            ngx.ctx.apicast = servers
          }
          proxy_http_version 1.1;
          proxy_pass $scheme://wildcard;
          proxy_set_header Host $host;
          proxy_set_header Connection "";
        }
      }
  kind: ConfigMap
  metadata:
    name: apicast-router-config
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: apicast-wildcard-router
    name: apicast-wildcard-router
  spec:
    host: apicast-${TENANT_NAME}.${WILDCARD_DOMAIN}
    port:
      targetPort: router
    tls:
      insecureEdgeTerminationPolicy: Allow
      termination: edge
    to:
      kind: Service
      name: apicast-router
    wildcardPolicy: Subdomain
parameters:
- description: AMP release tag.
  name: AMP_RELEASE
  required: true
  value: 2.0.0-CR2-redhat-1
- description: Root domain for the wildcard routes. Eg. example.com will generate
    3scale-admin.example.com.
  name: WILDCARD_DOMAIN
  required: true
- description: Domain name under the root that Admin UI will be available with -admin
    suffix.
  name: TENANT_NAME
  required: true
  value: 3scale
